--- a/templates/index.html
+++ b/templates/index.html
@@ -200,7 +200,7 @@
             </div>
             <div class="span6">
                 <h3 class="text-center"> Восстановление методом SART (реализация А.Бузмакова)</h3>
-                <p class="text-center text-info">Используется 2 итерации по всем проекциям, с параметром релаксации [0.8, 0.3]</p>
+                <p class="text-center text-info">Используется 2 итерации по всем проекциям, с параметрами релаксации [0.8, 0.3]</p>
                 <p class='text-center'>
                     <button id='make-reconstruction-buzmakov' class="btn btn-large btn-primary" type="button">Восстановить</button>
                 </p>
