--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sticky footer &middot; Twitter Bootstrap</title>
+    <title>Томография &middot; About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -125,7 +125,7 @@
                 <address>
                 <strong>Алексей Бузмаков</strong><br>
                 <p>Институт кристаллографии им. А.В. Шубникова РАН</p>
-                <a href="mailto:#">buzmakov@gmail.comm</a>
+                <a href="mailto:#">buzmakov@gmail.com</a>
                 </address>
             </div>
             <div class="span4">
