--- a/templates/index.html
+++ b/templates/index.html
@@ -278,7 +278,7 @@
                         angles: angles
                   }, function(data) {
                       $(this).addClass('disabled');
-                       $("#phantom-url").attr('href',data.phantom_fil
+                       $("#phantom-url").attr('href',data.phantom_file);
                        $("#sinogramm-url").attr('href',data.sinogramm_file);
                        $("#phantom-image").attr('src',data.phantom_image);
                        $("#sinogramm-image").attr('src',data.sinogramm_image);
