--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
     <!-- CSS -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="static/css/bootstrap-fileupload.min.css" rel="stylesheet">
     <style type="text/css">
 
       /* Sticky footer styles
@@ -123,7 +124,7 @@
                     Их можно сгененрировать из фантома или загрузить файл.
                 </p>
             </div>
-            <div class="span7" style="padding-right:20px; border-right: 1px solid #ccc;">
+            <div class="span6" style="padding-right:20px; border-right: 1px solid #ccc;">
                 <h3> Сгенерировать синограмму.</h3>
                 <p class="lead">
                     Генерируем фантом Шеппа-Логана с параметрами:
@@ -170,9 +171,28 @@
                 </p>
 
             </div>
-            <div class="span4">
+            <div class="span5">
                 <h3> Загрузить синограмму.</h3>
                 <p>TODO: добавить описание формата данных.</p>
+                <form>
+                    <div class="fileupload fileupload-new" data-provides="fileupload">
+                      <div class="input-append">
+                        <div class="uneditable-input span3">
+                            <i class="icon-file fileupload-exists"></i>
+                            <span class="fileupload-preview"></span>
+                        </div>
+                        <span class="btn btn-file">
+                            <span class="fileupload-new">Select file</span>
+                            <span class="fileupload-exists">Change</span>
+                            <input type="file" />
+                        </span>
+                        <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
+                        <button type="submit" class="btn">Upload</button>
+                      </div>
+
+                    </div>
+                </form>
+
             </div>
         </div>
 
@@ -196,6 +216,10 @@
                 <h1>Шаг 2. Томографическая реконструкция.</h1>
                 <p class="lead">
                     Теперь нужно провести реконструкцию различными методами.
+                </p>
+                <p class="text-info">
+                    При отображении результатов используется цветовая политра от минимального зачения в файле с данными до максимального.
+                    Для количественного скачивания результатов скачивайте текстовые файлы с данными, а не изображенеия.
                 </p>
                 <p class="text-warning">
                     Внимание! Реконструкция нектороыми методами происходит довольно медленно.
@@ -248,6 +272,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap-fileupload.min.js"></script>
 
     <script>
         var angles = '180';
